Mod: Add left pane for link operation

--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
 
-    <ui:composition template="/template2.xhtml">
+    <ui:composition template="/template.xhtml">
         <ui:define name="title">
             <h:outputText value="キャラクターリスト"></h:outputText>
 
