--- a/web/characterSheet/EditCharacterPerLevelPage.xhtml
+++ b/web/characterSheet/EditCharacterPerLevelPage.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template2.xhtml">
+    <ui:composition template="/template.xhtml">
         <ui:define name="title">
             <h:outputText value="レベル毎キャラクタ編集"></h:outputText>
         </ui:define>
