--- a/web/characterSheet/EditCharacterRecordPage.xhtml
+++ b/web/characterSheet/EditCharacterRecordPage.xhtml
@@ -7,7 +7,7 @@
 
     <!-- TODO: characterSheetController.characterRecord は sessionBeans から取ってくるべき。-->
 
-    <ui:composition template="/template2.xhtml">
+    <ui:composition template="/template.xhtml">
         <ui:define name="title">
             <h:outputText value="キャラクタ編集"></h:outputText>
         </ui:define>
