--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -6,25 +6,83 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
+        <h:outputStylesheet name="css/graystyle.css"/>
     </h:head>
 
     <h:body>
-        <h1>
-            <ui:insert name="title">Default Title</ui:insert>
-        </h1>
-        <p>
-            <ui:insert name="body">Default Body</ui:insert>
-        </p>
-        <hr/>
+
+        <h:panelGrid id="header" style="  width: 100%" styleClass="header">
+            <h:panelGrid columns="2" id="headerGrid" style="width: 100%; height: 100%;">
+                <h:panelGrid id="imageGrid" >
+                    <h:graphicImage id="image1" value="/resources/dndlogo.gif" width="96"/>
+                </h:panelGrid>
+                <h:panelGrid id="appnameGrid">
+                    <h:outputText id="outputText1" styleClass="appname" value="D&amp;D 3.5 キャラクター・シート"/>
+                </h:panelGrid>
+            </h:panelGrid>
+        </h:panelGrid>
+
+        <h:form>                                
+
+            <h:panelGrid columns="10" id="subHeaderGrid" style="width: 100%; height: 100%;" styleClass="subheader">
+                <h:panelGrid id="profileCell" rendered="false" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                    <h:commandLink action="#{pageHeader.profileLink_action}" id="profileLink2" styleClass="subheadertext" value="プレイヤー設定"/>
+                </h:panelGrid>
+                <h:panelGrid id="logoutCell" rendered="#{sessionBean.loggedIn}" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                    <h:commandLink action="#{pageHeader.logoutLink_action}" id="logoutLink" styleClass="subheadertext" value="ログアウト"/>
+                </h:panelGrid>
+                <h:panelGrid id="loginCell" rendered="false" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                    <h:commandLink action="#{pageHeader.loginLink_action}" id="loginLink" styleClass="subheadertext" value="ログイン"/>
+                </h:panelGrid>
+                <h:panelGrid id="newCharaCell" rendered="false" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                    <h:commandLink action="#{pageHeader.newCharaLink_action}" id="newCharaLink" styleClass="subheadertext" value="新規キャラクター作成"/>
+                </h:panelGrid>
+                <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                    <h:commandLink action="#{pageHeader.charaListLink_action}" id="charaListLink" styleClass="subheadertext" value="キャラクター一覧"/>                        
+                </h:panelGrid>                   
+            </h:panelGrid>
+
+        </h:form>
+
+        <h:panelGrid columns="2" styleClass="body">
+            <h:panelGrid styleClass="leftpane" >
+                <h:form>
+                    <h:panelGrid>
+                        <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                            <h:commandLink action="#{pageHeader.charaListLink_action}" id="charaListLink" styleClass="subheadertext" value="キャラクター一覧"/>                        
+                        </h:panelGrid>                     
+                        <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                            <h:commandLink action="#{pageHeader.adminLink_action}" id="adminLink" styleClass="subheadertext" value="管理画面"/>
+                        </h:panelGrid> 
+                        <h:panelGrid id="newClassCell" rendered="true" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                            <h:commandLink action="#{pageHeader.newClassLink_action}" id="newClassLink" styleClass="subheadertext" value="新規クラス作成"/>
+                        </h:panelGrid>
+                        <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                            <h:commandLink action="#{pageHeader.classListLink_action}" id="classListLink" styleClass="subheadertext" value="クラス一覧"/>
+                        </h:panelGrid>
+                        <h:panelGrid id="newRaceCell2" rendered="true" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                            <h:commandLink action="#{pageHeader.newRaceLink_action}" id="newRaceLink" styleClass="subheadertext" value="新規種族作成"/>
+                        </h:panelGrid>
+                        <h:panelGrid id="raceListCell2" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+                            <h:commandLink action="#{pageHeader.raceListLink_action}" id="raceListLink" styleClass="subheadertext" value="種族一覧"/>
+                        </h:panelGrid>                        
+                    </h:panelGrid>                
+                </h:form>                    
+            </h:panelGrid>  
+            <h:panelGrid styleClass="rightpane">
+                <ui:insert name="body">Default Body</ui:insert>
+            </h:panelGrid>
+        </h:panelGrid>
+
         <h:form>
-            <h:panelGrid columns="3">
-                <h:commandLink value="シナリオ一覧に戻る" action="#{templateControl.prepareScenarioList}" immediate="true" />
-            <h:outputLabel> / </h:outputLabel>
-                
-            <h:commandLink value="インデックスに戻る" action="#{templateControl.prepareIndex}" immediate="true" />        
-            </h:panelGrid>            
+            <h:panelGrid id="footer" style=" width: 100%" styleClass="footer">
+                <h:panelGrid id="footerGrid" style="footer">
+                    <h:panelGrid id="gotoTopCell" style="">
+                        <h:commandLink action="#{pageFooter.gotoTopLink_action}" id="gotoTopLink" styleClass="footertext" value="一番上へ" />
+                    </h:panelGrid>
+                </h:panelGrid>
+            </h:panelGrid>        
         </h:form>
     </h:body>
-    
+
 </html>
