--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -47,30 +47,38 @@
         <h:panelGrid columns="2" styleClass="body">
             <h:panelGrid styleClass="leftpane" >
                 <h:form>
-                    <h:panelGrid>
-                        <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-                            <h:commandLink action="#{pageHeader.charaListLink_action}" id="charaListLink" styleClass="subheadertext" value="キャラクター一覧"/>                        
+                    <h:panelGrid style="width: 100%">
+                        <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpanetext" value="キャラクター一覧"/>                        
                         </h:panelGrid>                     
-                        <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-                            <h:commandLink action="#{pageHeader.adminLink_action}" id="adminLink" styleClass="subheadertext" value="管理画面"/>
+                        <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="#{pageHeader.adminLink_action}" id="adminLink" styleClass="leftpanetext" value="管理画面"/>
                         </h:panelGrid> 
-                        <h:panelGrid id="newClassCell" rendered="true" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-                            <h:commandLink action="#{pageHeader.newClassLink_action}" id="newClassLink" styleClass="subheadertext" value="新規クラス作成"/>
+                        <h:panelGrid id="newClassCell" rendered="true" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="#{pageHeader.newClassLink_action}" id="newClassLink" styleClass="leftpanetext" value="新規クラス作成"/>
                         </h:panelGrid>
-                        <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-                            <h:commandLink action="#{pageHeader.classListLink_action}" id="classListLink" styleClass="subheadertext" value="クラス一覧"/>
+                        <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="#{pageHeader.classListLink_action}" id="classListLink" styleClass="leftpanetext" value="クラス一覧"/>
                         </h:panelGrid>
-                        <h:panelGrid id="newRaceCell2" rendered="true" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-                            <h:commandLink action="#{pageHeader.newRaceLink_action}" id="newRaceLink" styleClass="subheadertext" value="新規種族作成"/>
+                        <h:panelGrid id="newRaceCell2" rendered="true" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="#{pageHeader.newRaceLink_action}" id="newRaceLink" styleClass="leftpanetext" value="新規種族作成"/>
                         </h:panelGrid>
-                        <h:panelGrid id="raceListCell2" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-                            <h:commandLink action="#{pageHeader.raceListLink_action}" id="raceListLink" styleClass="subheadertext" value="種族一覧"/>
-                        </h:panelGrid>                        
+                        <h:panelGrid id="raceListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="#{pageHeader.raceListLink_action}" id="raceListLink" styleClass="leftpanetext" value="種族一覧"/>
+                        </h:panelGrid>       
+                        <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="/scenarioRecord/List" styleClass="leftpanetext" value="シナリオ一覧"/>
+                        </h:panelGrid>   
+                        <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                            <h:commandLink action="/monsterMaster/List" styleClass="leftpanetext" value="モンスター一覧"/>
+                        </h:panelGrid>  
                     </h:panelGrid>                
                 </h:form>                    
             </h:panelGrid>  
             <h:panelGrid styleClass="rightpane">
-                <ui:insert name="body">Default Body</ui:insert>
+                <h:panelGrid id="topcontents" style="width: 100%" styleClass="contents">
+                    <ui:insert name="body">Default Body</ui:insert>
+                </h:panelGrid>
             </h:panelGrid>
         </h:panelGrid>
 
