--- a/web/characterSheet/EditCharacterRecordPage.xhtml
+++ b/web/characterSheet/EditCharacterRecordPage.xhtml
@@ -9,7 +9,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="キャラクタ編集"></h:outputText>
+            <h:outputText value="キャラクター・シートの編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
