--- a/web/characterSheet/EditCharacterPerLevelPage.xhtml
+++ b/web/characterSheet/EditCharacterPerLevelPage.xhtml
@@ -7,11 +7,10 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="レベル毎キャラクタ編集"></h:outputText>
+            <h:outputText value="キャラクター・シートのレベル毎の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
-
                     <h:panelGroup id="messagePanel" layout="block">
                         <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                     </h:panelGroup> 
